--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,23 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 40.4 ms, sys: 9.94 ms, total: 50.4 ms\n",
+      "Wall time: 5.2 s\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<Response [200]>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "%%time\n",
     "import requests\n",
-    "url = 'http://0.0.0.0:5000'\n",
+    "url = 'http://168.62.54.118:5000'\n",
     "files = {'media': open('test_corner2.jpg', 'rb')}\n",
     "requests.post(url, files=files)"
    ]
